--- a/index.html
+++ b/index.html
@@ -8,8 +8,13 @@
 <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<h1>vai ser uma imagem aqui</h1>
-<ul>
-   <li>es</li>
+    <header class="cabecalho">
+    <img class="cabecalho-imagem" src="alurastar logo.png" alt="logo da alura start">
+    <ul class="cabecalho-lista">
+        <li class="cabecalho-lista-item">escola</li>
+      <li class="cabecalho-lista-items"> estudante</li>
+      <ul></ul>
+      <header>
+
 </body>
 </html>
