--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Document</title> 
 <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <header class="cabecalho">
     <img class="cabecalho-imagem" src="alurastar logo.png" alt="logo da alura start">
@@ -15,6 +16,11 @@
       <li class="cabecalho-lista-items"> estudante</li>
       <ul></ul>
       <header>
-
+   <section class="escola">
+     <h2 class="escola-titulo">sobre a escola</h2>
+      <p class=" escola-texto-um"></p>
+      <p class="escola-texto-dois"></p>
+   </section>
 </body>
+
 </html>
