--- a/index.html
+++ b/index.html
@@ -1,26 +1,28 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title> 
-<link rel="stylesheet" href="style.css">
+    <title>flashcard</title>
 </head>
-
 <body>
-    <header class="cabecalho">
-    <img class="cabecalho-imagem" src="alurastar logo.png" alt="logo da alura start">
-    <ul class="cabecalho-lista">
-        <li class="cabecalho-lista-item">escola</li>
-      <li class="cabecalho-lista-items"> estudante</li>
-      <ul></ul>
-      <header>
-   <section class="escola">
-     <h2 class="escola-titulo">sobre a escola</h2>
-      <p class=" escola-texto-um"></p>
-      <p class="escola-texto-dois"></p>
-   </section>
+    <main>
+     <section id=" container">
+        <article class="cartao">
+            <div class="cartao__conteudo">
+                <h3>programacao</h3>
+                <div class=".cartao__conteudo__pergunta">
+                    O que é javascript?
+                </div>
+                <div class=" cartao__conteudo__responda">
+                    O javascript é uma linguagem de programacao
+                </div>
+            </div>
+        </article>
+     </section>
+    </main>
+    <footer>
+        <p>projeto desenvolvido pela alura sem fins lrucrativos</p>
+    </footer>
 </body>
-
 </html>
